[package]
name = "rs-month2str"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"

[lib]
crate-type = [
	"cdylib",
	"rlib",
]

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[features]
defaults = [
]
